creating a new branch to do a PR on eventually. Mostly Primenet fixes.

--- a/google-colab/GoogleColabCPU.ipynb
+++ b/google-colab/GoogleColabCPU.ipynb
@@ -40,12 +40,9 @@
     "\n",
     "def load_drive():\n",
     "  '''Load & cd into gdrive for persistent data'''\n",
-    "  if os.path.exists(\"/content/gdrive/My Drive\"): # use our notebook\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/gdrive')\n",
-    "    %cd \"/content/gdrive/My Drive/\"\n",
-    "  elif os.path.exists(\"/content/drive/My Drive\"): # create your own notebook with our code\n",
-    "    %cd \"/content/drive/My Drive\"\n",
+    "  from google.colab import drive\n",
+    "  drive.mount('/content/gdrive')\n",
+    "  %cd \"/content/gdrive/My Drive\"\n",
     "  if \"My Drive/GIMPS\" in os.getcwd(): # don't create a subfolder in GIMPS/\n",
     "    return\n",
     "  !mkdir -p GIMPS\n",
@@ -75,7 +72,8 @@
     "  !sed -i '/^crontab / s/^/# /' mprime2.sh # Do not create a cronjob\n",
     "  !sed -i '/^expect {/a \\\\t\"Upload bandwidth limit in Mbps (*):\" { sleep 1; send -- \"1000\\\\r\"; exp_continue }\\n\\t\"Skip advanced resource settings (*):\" { sleep 1; send -- \"n\\\\r\"; exp_continue }\\n\\t\"Optional directory to hold *:\" { sleep 1; send -- \"\\\\r\"; exp_continue }\\n\\t\"stage 2 memory in GB (*):\" { sleep 1; send -- \"6\\\\r\"; exp_continue }\\n\\t\"Max emergency memory in GB/worker (*):\" { sleep 1; send -- \"3\\\\r\"; exp_continue }' mprime2.exp\n",
     "  !bash -- mprime2.sh $computer_number $prime_ID $computer_name $type_of_work # Run script\n",
-    "  !echo 'FixedHardwareUID=1' >> \"{'mprime_cpu/prim000' + computer_number + '.txt'}\"\n",
+    "  !{ echo 'FixedHardwareUID=1'; cat prim000X.txt; } > temp.txt\n",
+    "  !mv temp.txt prim000X.txt\n",
     "  run()\n",
     "\n",
     "load_drive()\n",
