--- a/google-colab/GoogleColabGPU.ipynb
+++ b/google-colab/GoogleColabGPU.ipynb
@@ -94,7 +94,8 @@
     "  !sed -i '/^crontab / s/^/# /' mprime2.sh # Do not create a cronjob\n",
     "  !sed -i '/^expect {/a \\\\t\"Upload bandwidth limit in Mbps (*):\" { sleep 1; send -- \"1000\\\\r\"; exp_continue }\\n\\t\"Skip advanced resource settings (*):\" { sleep 1; send -- \"n\\\\r\"; exp_continue }\\n\\t\"Optional directory to hold *:\" { sleep 1; send -- \"\\\\r\"; exp_continue }\\n\\t\"stage 2 memory in GB (*):\" { sleep 1; send -- \"6\\\\r\"; exp_continue }\\n\\t\"Max emergency memory in GB/worker (*):\" { sleep 1; send -- \"3\\\\r\"; exp_continue }' mprime2.exp\n",
     "  !bash -- mprime2.sh $computer_number $prime_ID $computer_name $CPU_type_of_work # Run script\n",
-    "  !echo 'FixedHardwareUID=1' >> \"{'mprime_gpu/prim000' + computer_number + '.txt'}\"\n",
+    "  !{ echo 'FixedHardwareUID=1'; cat \"{'mprime_gpu/prim000' + computer_number + '.txt'}\"; } > temp.txt\n",
+    "  !mv temp.txt \"{'mprime_gpu/prim000' + computer_number + '.txt'}\"\n",
     "  run()\n",
     "\n",
     "def debug_exit():\n",
@@ -114,17 +115,14 @@
     "  else:\n",
     "    print(f'No `{debug}` output file found for debug option and computer number `{computer_number}`.\\n')\n",
     "\n",
+    "\n",
     "def load_drive():\n",
     "  '''Load & cd into gdrive for persistent data'''\n",
     "  global path_dir\n",
-    "  if os.path.exists(\"/content/gdrive/My Drive\"): # use our notebook\n",
-    "    from google.colab import drive\n",
-    "    drive.mount('/content/gdrive')\n",
-    "    %cd \"/content/gdrive/My Drive\"\n",
-    "    path_dir = \"/content/gdrive/My Drive/GIMPS/\"\n",
-    "  elif os.path.exists(\"/content/drive/My Drive\"): # create your own notebook with our code\n",
-    "    %cd \"/content/drive/My Drive\"\n",
-    "    path_dir = \"/content/drive/My Drive/GIMPS/\"\n",
+    "  from google.colab import drive\n",
+    "  drive.mount('/content/gdrive')\n",
+    "  %cd \"/content/gdrive/My Drive\"\n",
+    "  path_dir = \"/content/gdrive/My Drive/GIMPS/\"\n",
     "  if \"My Drive/GIMPS\" in os.getcwd(): # don't create a subfolder in GIMPS/\n",
     "    return\n",
     "  !mkdir -p GIMPS\n",
